# entrace

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.txt  about.toml  about_html.hbs  about_text.hbs  example_query.lua  flake.nix  package.nix  rustfmt.toml  shell.nix
.github/workflows/: test.yml
bench/: Cargo.toml
bench/scripts/: filterset.lua  search_by_attr.lua
bench/src/: args.rs  main.rs  utils.rs
docs/: file-formats.md  filtersets.md  thirdparty.html  thirdparty.txt  usage-gui.md  usage-library.md
entrace_convert/: Cargo.toml
entrace_convert/src/: main.rs
entrace_core/: Cargo.toml  README.md
entrace_core/src/: convert.rs  en_formatter.rs  entry.rs  lib.rs  log_provider.rs  storage.rs  tree_layer.rs
entrace_core/src/mmap/: et_storage.rs  mmap_log_provider.rs  mod.rs
entrace_core/src/remote/: file_iet_log_provider.rs  mod.rs  remote_log_provider.rs  remote_storage.rs
entrace_core/tests/: convert_1.rs  convert_2.rs  issue_4.rs
entrace_query/: Cargo.toml  build.rs
entrace_query/api-docs/: en_as_string.md  en_attr_by_idx.md  en_attr_by_name.md  en_attr_name.md  en_attr_names.md  en_attr_value.md  en_attr_values.md  en_attrs.md  en_child_cnt.md  en_children.md  en_contains_anywhere.md  en_filter.md  en_filterset_dnf.md  en_filterset_from_list.md  en_filterset_from_range.md  en_filterset_intersect.md  en_filterset_invert.md  en_filterset_materialize.md  en_filterset_not.md  en_filterset_union.md  en_foreach.md  en_join.md  en_log.md  en_metadata_file.md  en_metadata_level.md  en_metadata_line.md  en_metadata_module_path.md  en_metadata_name.md  en_metadata_table.md  en_metadata_target.md  en_pretty_table.md  en_span_cnt.md  en_span_range.md
entrace_query/src/: filtersets.rs  lib.rs  lua_api.rs  lua_value.rs  main.rs
entrace_script/: Cargo.toml  test_filterset.lua  test_script.lua
entrace_script/src/: main.rs
example/: Cargo.toml  scoreman.iet
example/src/: main.rs
gui/: Cargo.toml
gui/benches/: fused_bitvec.rs
gui/src/: app.rs  benchmarkers.rs  cmdline.rs  connection_dialog.rs  convert_dialog.rs  enbitvec.rs  ephemeral_settings.rs  frame_time.rs  homepage.rs  log.rs  main.rs  notifications.rs  self_tracing.rs  settings.rs  tree.rs
gui/src/search/: bottom_panel.rs  lua_api.rs  mod.rs  query_window.rs  segmented_button.rs
