[package]
name = "entrace_core"
description = "client library for ENTRACE, a modern log viewer and observability toolkit for Rust"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algorithmiker/entrace"
categories = ["development-tools::debugging"]

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
crossbeam-channel = "0.5.15"
memmap2 = {version = "0.9.7", optional = true }
notify = {version = "8.1.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = "0.3.19"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
default = ["mmap", "notify-watch"]
mmap = ["dep:memmap2"]
notify-watch = ["dep:notify"]
