[package]
name = "entrace_query"
version = "0.1.2"
edition = "2024"

[dependencies]
mlua = { version = "0.11.0", features = ["error-send", "luajit"] }
entrace_core = { version = "0.1.1", path = "../entrace_core/" }
anyhow = "1.0.100"
memchr = "2.7.6"
thiserror = "2.0.17"
roaring = "0.11.2"
itertools = "0.14.0"

[build-dependencies]
rustdoc-json = "0.8"
syn = { version = "2.0.111", features = ["full"] }

[[bin]]
name="entrace-query-test"
path="src/main.rs"
