[package]
name = "entrace_script"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
mlua = { version = "0.10.5", features = ["error-send", "luajit"] }
entrace_query = { version = "0.1.1", path = "../entrace_query/" }
entrace_core = { version = "0.1.1", path = "../entrace_core/" }
anyhow = "1.0.100"

[[bin]]
name = "entrace-script"
path = 'src/main.rs'
