[package]
name = "entrace_example"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
petgraph = "0.6"
tracing = {version = "0.1"}
tracing-appender = {version = "0.2.3" }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "registry"]}
entrace_core={path='../entrace_core'}
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
