[package]
name = "entrace_gui"
version = "0.1.2"
edition = "2024"
license = "(MIT OR Apache-2.0) AND OFL-1.1"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
bitvec = "1.0.1"
circular-buffer = "1.1.0"
clap = { version = "4.5.40", features = ["derive"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
directories = "6.0.0"
eframe = "0.33.0"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["svg"] }
entrace_core = { version = "0.2.0", path = "../entrace_core/" }
entrace_query = { version = "0.1.1", path = "../entrace_query/" }
memchr = "2.7.5"
mimalloc = "0.1.47"
mlua = { version = "0.11.0", features = ["error-send", "luajit"] }
notify = "8.0.0"
rfd = "0.17.2"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

# dev only
dioxus-devtools = {version = "0.7.2", optional = true}
subsecond = {version = "0.7.2", optional = true}
nucleo-matcher = "0.3.1"

[features]
dev = ["dep:subsecond", "dep:dioxus-devtools"]

[dev-dependencies]
divan = "0.1.21"
bitvec = "1.0.1"
rand = "0.9.1"

[[bench]]
name = "fused_bitvec"
harness = false

[[bin]]
name = "entrace"
path = "src/main.rs"
